--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.3
+  
+  google_fonts: ^4.0.3
+  percent_indicator: ^4.2.2
+
 
 
 
@@ -62,6 +66,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   # assets:
+   
   
  
 
